<resources>
    <string name="app_name">InnoShop</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Логин</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="loading">Загрузка</string>

    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_products">Добавить продукт</string>
    <string name="name_product">Названия товара</string>
    <string name="price_product">Цена товара</string>
    <string name="count_products">Количество товара</string>
    <string name="unit_type_id">Unit Type ID</string>
    <string name="description">Описание</string>
    <string name="qr_code">QR Code</string>
</resources>
